# relbot_robotics

./: 1thread  1thread.cpp  README.md  clock  clock.cpp  clock_monitor_no_extra.csv  evl_plot.py  execution_log.csv  execution_times.csv  execution_times_extra.csv  execution_times_no_extra.csv  jitter_log.csv  periodic_freq  periodic_freq.cpp  periodic_thread.cpp  periodic_thread_2.2.cpp  periodicthread_2.2  periodicthread_2.2.cpp  plot.py  plot2.py  system_log.txt  timing_data_nostress.csv  timing_data_stress.csv
XRF2-v1.1/XRF2/XenoRosFramework/Common/XRF2_msgs/msg/: Ros2Xeno.msg  Xeno2Ros.msg
XRF2-v1.1/__MACOSX/XRF2/: ._XenoRosFramework
cam2image_vm2ros/: README.md  package.xml
cam2image_vm2ros/config/: cam2image.yaml
cam2image_vm2ros/include/: base64.hpp  cam2image.hpp  remote_capture.hpp
cam2image_vm2ros/src/: cam2image.cpp
controler_1_2_3/: package.xml
controler_1_2_3/launch/: controler_1_2_3.py
relbot_simulator/: CHANGELOG.rst
relbot_simulator/include/: relbot_simulator.hpp
ros2/: experiment_seq07.csv
ros2/install/: local_setup.sh  setup.sh
ros2/install/response_node_07/lib/response_node_07/: response_07
ros2/install/response_node_07/share/response_node_07/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/install/response_node_07/share/response_node_07/cmake/: response_node_07Config.cmake
ros2/install/sequence_node_07/lib/sequence_node_07/: sequence_07
ros2/install/sequence_node_07/share/sequence_node_07/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/sequence_node_07/share/sequence_node_07/cmake/: sequence_node_07Config.cmake
ros2/log/: latest_build
ros2/src/response_node_07/src/: Loop07.cpp
ros2/src/sequence_node_07/src/: Seq07.cpp
src/XRF2_msgs/: CMakeLists.txt  package.xml
src/XRF2_msgs/msg/: Ros2Xeno.msg  Xeno2Ros.msg
src/cam2image_vm2ros/: CMakeLists.txt
src/cam2image_vm2ros/config/: cam2image.yaml  cam2image_relbot.yaml
src/cam2image_vm2ros/include/: cam2image.hpp  visibility_control.h
src/cam2image_vm2ros/src/: cam2image.cpp  remote_capture.cpp
src/controler_1_2_3/: CMakeLists.txt
src/controler_1_2_3(new)/src/: controler_1_2_3.cpp
src/controler_1_2_3/src/: controler_1_2_3.cpp
src/moving_camera_tracker/: CMakeLists.txt  package.xml
src/moving_camera_tracker(new)/src/: moving_camera_tracker.cpp
src/moving_camera_tracker/src/: moving_camera_tracker.cpp
src/relbot_simulator/: CMakeLists.txt  README.md  package.xml
src/relbot_simulator/include/: relbot_simulator.hpp
src/relbot_simulator/src/: relbot_simulator.cpp
src/response_node_07/: CMakeLists.txt
src/ros2_pub_node/: CMakeLists.txt  package.xml
src/ros2_pub_node/src/: test_node.cpp
src/ros_xeno_bridge/include/: RosXenoBridge.hpp
src/sequence_node_07/: CMakeLists.txt  package.xml
src/xrf2test/: CMakeLists.txt  main.cpp  package.xml
src/xrf2test/controller/: LoopController.cpp  LoopController.h  LoopController_tokens.xml  test_LoopController.cpp
src/xrf2test/include/: xrf2test.hpp
src/xrf2test/src/: test_node.cpp  xrf2test.cpp
